--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
@@ -27,7 +27,7 @@
 }
 
 .h-40 {
-    height:35px;
+    height:40px;
 }
 
 .p-0 {
@@ -62,6 +62,23 @@
 }
 
 .widget-header {
-    padding: 15px;
+    padding-left: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0.15);
+}
+
+::-webkit-scrollbar {
+    width: 15px;
+    height: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(0,0,0,0.25);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(0,0,0,0.35);
 }
 
