--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.scss
@@ -18,6 +18,11 @@
 
 @import '../../../../../scss/variables';
 
+.table-container {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 .table-widget {
     width: 100%;
     background: inherit;
