add support for reconfigurable CondeInputStaticProperty

--- a/ui/src/app/dashboard/components/widgets/map/map-widget.component.html
+++ b/ui/src/app/dashboard/components/widgets/map/map-widget.component.html
@@ -23,6 +23,7 @@
          leaflet
          [leafletOptions]="options"
          (leafletMapReady)="onMapReady($event)">
+        <div *ngIf="addLayers" [leafletLayers]="layers"></div>
 <!--        <div *ngIf="showMarkers" [leafletLayer]="markerLayer"></div>-->
         <div *ngFor="let markerLayer of markerLayers" [leafletLayer]="markerLayer"></div>
     </div>
