--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -20,18 +20,10 @@
     <mat-drawer-container class="designer-panel-container h-100 dashboard-grid">
         <mat-drawer #designerDrawer [opened]="editMode" mode="side" position="end" class="designer-panel" (opened)="triggerResize()">
             <div fxLayout="column" fxFlex="100">
-                <div fxLayout="row" class="sp-tab-bg designer-panel-header">
-                    <div fxLayoutAlign="start center" class="designer-panel-title">Widget Configuration</div>
-                    <div fxFlex fxLayoutAlign="end end">
-                        <button mat-button mat-icon-button (click)="addWidget()">
-                            <mat-icon>add</mat-icon>
-                        </button>
-                    </div>
-                </div>
                 <sp-data-explorer-designer-panel
                         [currentlyConfiguredWidget]="currentlyConfiguredWidget"
                         [dataLakeMeasure]="dataLakeMeasure"
-                        (addWidgetEmitter)="addWidget()"
+                        (addWidgetEmitter)="addWidget($event)"
                         fxFlex="100">
 
                 </sp-data-explorer-designer-panel>
