--- a/ui/src/app/core/components/toolbar/toolbar.component.html
+++ b/ui/src/app/core/components/toolbar/toolbar.component.html
@@ -23,8 +23,8 @@
                 <div style="padding:5px;border-radius:0px;margin-right:15px;position:relative;left:20px;">
                     <img alt="icon" src="../../../../assets/img/sp/logo-navigation.png" style="height:30px;">
                 </div>
-                <div style="padding: 5px 5px;font-size:15px;margin-left:10px;">
-                    <h4 style="margin-top:14px;font-size:12pt;font-weight:bold;">{{activePageName}}</h4>
+                <div style="margin-left:30px;">
+                    <span class="active-page">{{activePageName}}</span>
                 </div>
             </div>
         </div>
