[STREAMPIPES-402] Disable widget creation mode when other widget is selected

--- a/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
@@ -76,7 +76,7 @@
                 </button>
                 <button *ngIf="newWidgetMode && selectedIndex == 1" mat-button mat-raised-button class="mat-basic mr-10"
                         (click)="selectedIndex = 0" style="margin-right: 10px;">
-                    Create
+                    Back
                 </button>
                 <button *ngIf="newWidgetMode && selectedIndex == 1" mat-button mat-raised-button color="accent"
                         (click)="createNewWidget()">
