--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -47,10 +47,10 @@
                     <sp-data-explorer-table-widget
                             (removeWidgetCallback)="removeWidget()"
                             [timeSettings]="timeSettings"
-                            [gridsterItem]="item"
+                            [gridsterItem]="dashboardItem"
                             [gridsterItemComponent]="gridsterItemComponent"
                             [editMode]="editMode"
-                            [dataViewDashboardItem]="widget"
+                            [dataViewDashboardItem]="dashboardItem"
                             [dataExplorerWidget]="configuredWidget"
                             [dataLakeMeasure]="dataLakeMeasure"
                             class="h-100">
@@ -60,10 +60,10 @@
                     <sp-data-explorer-line-chart-widget
                             (removeWidgetCallback)="removeWidget()"
                             [timeSettings]="timeSettings"
-                            [gridsterItem]="item"
+                            [gridsterItem]="dashboardItem"
                             [gridsterItemComponent]="gridsterItemComponent"
                             [editMode]="editMode"
-                            [dataViewDashboardItem]="widget"
+                            [dataViewDashboardItem]="dashboardItem"
                             [dataExplorerWidget]="configuredWidget"
                             [dataLakeMeasure]="dataLakeMeasure"
                             class="h-100">
@@ -73,10 +73,10 @@
                     <sp-data-explorer-image-widget
                             (removeWidgetCallback)="removeWidget()"
                             [timeSettings]="timeSettings"
-                            [gridsterItem]="item"
+                            [gridsterItem]="dashboardItem"
                             [gridsterItemComponent]="gridsterItemComponent"
                             [editMode]="editMode"
-                            [dataViewDashboardItem]="widget"
+                            [dataViewDashboardItem]="dashboardItem"
                             [dataExplorerWidget]="configuredWidget"
                             [dataLakeMeasure]="dataLakeMeasure"
                             class="h-100"></sp-data-explorer-image-widget>
